<resources>
    <string name="app_name">PopcornAndSodaOnline</string>
    <string name="username_login">Username</string>
    <string name="l_ogin">Login</string>
    <string name="p_assword">Password</string>
    <string name="_login">LOGIN</string>
    <string name="s_ignup">SignUp</string>
    <string name="e_mail">Email</string>
    <string name="n_ome">Nome</string>
    <string name="c_reate_an_a_ccount_s_ign_u_p">Create an Account? <u>Sign Up</u></string>
    <string name="signup_message">Already have an account? <u>Login</u></string>
    <string name="login_message">No account? SignUp</string>
    <string name="m_ovies">Movies</string>
    <string name="_shows">SHOWS</string>
    <string name="_actors">ACTORS</string>
    <string name="_productions">PRODUCTIONS</string>
    <string name="_books">BOOKS</string>
    <string name="_authors">AUTHORS</string>
    <string name="title_activity_books">Books</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="p_roductors">Productors</string>
    <string name="_todo">TODO</string>
</resources>